--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script type="stylesheet" src="css/main.css"></script>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <title>Document</title>
+    <script 
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
     <script defer src="js/main.js"></script>
-    <script defer 
-src="https://code.jquery.com/jquery-3.3.1.min.js"
-integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-crossorigin="anonymous"></script>
 
 
 </head>
 <body>
+    <table class="skills-list">
     
+    <h3 id="header">MY DEVELOPER SKILLS</h3>
+    
+    <tbody>
+    <tr></tr><br>
+    </tbody>
+    </table>
+    <section>
+    <input id="new-skill"><button id="add">ADD SKILL</button>
+    </section>
+ 
 </body>
 </html>
